@@ -302,6 +302,10 @@ What's New in Pylint 2.13.9?
 ============================
 Release date: TBA
 
+* Fix saving of persistent data files in environments where the user's cache
+  directory and the linted file are on a different drive.
+
+  Closes #6394
 
 
 What's New in Pylint 2.13.8?
